"ADD --- Se resolvieron las Kata6, kata7 y Kata8"